--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-  "telegraf": "^4.12.3",
-  "@supabase/supabase-js": "^2.42.0",
-  "openai": "^4.0.0",
-  "dotenv": "^16.0.3",
-  "node-fetch": "^3.3.2"
-}
+    "@supabase/supabase-js": "^2.42.0",
+    "dotenv": "^16.0.3",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.0.0",
+    "telegraf": "^4.12.3"
+  }
 }
